unpackaged/main/default/objects/SBQQ__Quote__c/fields/Markup_Sale_Lowest__c.field-meta.xml
<CustomField>
    <fullName>Markup_Sale_Lowest__c</fullName>
    <description>Lowest markup on Sale quote lines</description>
    <inlineHelpText>Lowest markup on Sale quote lines</inlineHelpText>
    <label>Markup Sale Lowest</label>
    <summarizedField>SBQQ__QuoteLine__c.SBQQ__MarkupRate__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Trans_Category__c</field>
        <operation>equals</operation>
        <value>Sale, Carry On</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>