unpackaged/main/default/objects/SBQQ__Quote__c/fields/Milestone_Description_3__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Description_3__c</fullName>
    <label>Milestone Description 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>