unpackaged/main/default/objects/SBQQ__Quote__c/fields/Min_Resident_Day_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Min_Resident_Day_Commitment__c</fullName>
    <description>Minimum number of guaranteed resident day stays</description>
    <inlineHelpText>Minimum number of guaranteed resident day stays. Enter 0 if not applicable.</inlineHelpText>
    <label>Min. Resident Day Commitment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>