unpackaged/main/default/objects/SBQQ__Quote__c/fields/Monthly_Building_Payment_1__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Building_Payment_1__c</fullName>
    <formula>IF(
    AND(Infleet_ROA_1__c&gt;0,
        Target_New_ROA_1__c&gt;0,
        Override_New_ROA_1__c&gt;0),
    Infleet_List_Prices_1__c +  New_List_Prices_1__c + VAPS_Final_Monthly_Payment__c + PPF_Final_Monthly_Payment__c,null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Building Payment 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>