unpackaged/main/default/objects/SBQQ__Quote__c/fields/Monthly_Building_Payment_Final__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Building_Payment_Final__c</fullName>
    <formula>Monthly_Payment_for_Infleet_Units__c +  Monthly_Payment_for_New_Units__c + VAPS_Final_Monthly_Payment__c + PPF_Final_Monthly_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Building Payment Final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>