unpackaged/main/default/objects/SBQQ__Quote__c/fields/Monthly_Building_Payments__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Building_Payments__c</fullName>
    <formula>Monthly_Payment_for_Infleet_Units__c +  Monthly_Payment_for_New_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Building Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>