unpackaged/main/default/objects/SBQQ__Quote__c/fields/Monthly_Damage_Waiver_Amount__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Damage_Waiver_Amount__c</fullName>
    <description>Monthly Damage Waiver is calculated at 14% of the Total Monthly Amount for the quote.</description>
    <formula>IF( Total_Monthly_Amount__c = 0, null,  Total_Monthly_Amount__c * 0.14)</formula>
    <inlineHelpText>Monthly Damage Waiver is calculated at 14% of the Total Monthly Amount for the quote.</inlineHelpText>
    <label>Total Monthly Damage Waiver</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>