unpackaged/main/default/objects/SBQQ__Quote__c/fields/Monthly_Payment_for_Infleet_Units__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_for_Infleet_Units__c</fullName>
    <label>Monthly Payment for Infleet Units</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>