unpackaged/main/default/objects/SBQQ__Quote__c/fields/Most_Recent_Change_Order_created__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Change_Order_created__c</fullName>
    <label>Most Recent Change Order created</label>
    <type>DateTime</type>
</CustomField>