unpackaged/main/default/objects/SBQQ__Quote__c/fields/MP_Checkbox_checked__c.field-meta.xml
<CustomField>
    <fullName>MP_Checkbox_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MP Checkbox checked</label>
    <type>Checkbox</type>
</CustomField>