unpackaged/main/default/objects/SBQQ__Quote__c/fields/MSA_Date__c.field-meta.xml
<CustomField>
    <fullName>MSA_Date__c</fullName>
    <label>MSA Date</label>
    <type>Date</type>
</CustomField>