unpackaged/main/default/objects/SBQQ__Quote__c/fields/MSA_Number__c.field-meta.xml
<CustomField>
    <fullName>MSA_Number__c</fullName>
    <label>MSA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>