unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Amount_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Sales_Tax__c</fullName>
    <formula>Sales_Tax_Amount__c + SBQQ__NetAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount + Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>