unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total_Backend__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Backend__c</fullName>
    <label>Net Total - Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>