unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total_Camp_Ops__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Camp_Ops__c</fullName>
    <description>Net Total of Camp Operations quote lines excluding Optional</description>
    <inlineHelpText>Net Total of Camp Operations quote lines excluding Optional</inlineHelpText>
    <label>Net Total Camp Ops</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>