unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total_Disaster__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Disaster__c</fullName>
    <description>Net total of all quote lines where Transaction Category = Disaster, excl Optional. Populated by Price Rule and Summary Variable.</description>
    <inlineHelpText>Net total of all quote lines where Transaction Category = Disaster, excl Optional.</inlineHelpText>
    <label>Net Total Disaster</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>