unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total_Dismantle__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Dismantle__c</fullName>
    <description>Net total of quote lines where Transaction Category = Dismantle, excl Optional. Populated by price rule/summary variable.</description>
    <inlineHelpText>Net total of quote lines where Transaction Category = Dismantle, excl Optional.</inlineHelpText>
    <label>Net Total Dismantle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>