unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total_Ops__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Ops__c</fullName>
    <description>Net Total of Delivery, Dismantle, Install, Return and Camp Ops, excl Optional</description>
    <formula>Net_Total_Delivery__c + Net_Total_Dismantle__c + Net_Total_Install__c + Net_Total_Return__c + Net_Total_Camp_Ops__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Total of Delivery, Dismantle, Install, Return and Camp Ops, excl Optional</inlineHelpText>
    <label>Net Total Ops</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>