unpackaged/main/default/objects/SBQQ__Quote__c/fields/Net_Total_Upfront_Site_Work__c.field-meta.xml
<CustomField>
    <fullName>Net_Total_Upfront_Site_Work__c</fullName>
    <label>Net Total - Upfront Site Work</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>