unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Building_Costs__c.field-meta.xml
<CustomField>
    <fullName>New_Building_Costs__c</fullName>
    <formula>IF(OR(ISBLANK( New_Capped_Costs_L__c ), New_Capped_Costs_L__c =0), New_Capped_Costs_S__c, New_Capped_Costs_L__c ) - Capitalized_Transportation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Building Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>