unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Building_Factor_L__c.field-meta.xml
<CustomField>
    <fullName>New_Building_Factor_L__c</fullName>
    <label>New Building Factor (L)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>