unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Building_Vendors__c.field-meta.xml
<CustomField>
    <fullName>New_Building_Vendors__c</fullName>
    <label>New Building Vendors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>