unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_CAPEX_Value_Required__c.field-meta.xml
<CustomField>
    <fullName>New_CAPEX_Value_Required__c</fullName>
    <description>Amount of Capital Expenditure required for this quote that has not already been approved.  Will be sent to parent Opportunity</description>
    <inlineHelpText>Amount of Capital Expenditure required for this quote that has not already been approved.  Will be sent to parent Opportunity</inlineHelpText>
    <label>CAPEX Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>