unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Capped_Costs_L__c.field-meta.xml
<CustomField>
    <fullName>New_Capped_Costs_L__c</fullName>
    <label>New Capped Costs (L)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>