unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Fleet_Factor_Selected__c.field-meta.xml
<CustomField>
    <fullName>New_Fleet_Factor_Selected__c</fullName>
    <formula>CASE( To_be_entered_into_pipeline__c ,
'Term 1',IF(ISBLANK(Override_New_Factor_1__c),Target_New_Factor__c,Override_New_Factor_1__c),
'Term 2',IF(ISBLANK(Override_New_Factor_2__c),Target_New_Factor_2__c,Override_New_Factor_2__c),
'Term 3',IF(ISBLANK(Override_New_Factor_3__c),Target_New_Factor_3__c,Override_New_Factor_3__c),
'Term 4',IF(ISBLANK(Override_New_Factor_4__c),Target_New_Factor_4__c,Override_New_Factor_4__c),
'Term 5',IF(ISBLANK(Override_New_Factor_5__c),Target_New_Factor_5__c,Override_New_Factor_5__c),
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Fleet Factor Selected</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>