unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Fleet_ROA__c.field-meta.xml
<CustomField>
    <fullName>New_Fleet_ROA__c</fullName>
    <formula>((Monthly_Payment_for_New_Units__c*12)/(New_Capped_Costs_L__c ))</formula>
    <label>New Fleet ROA%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>