unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Floors__c.field-meta.xml
<CustomField>
    <fullName>New_Floors__c</fullName>
    <label>New Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>