unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_List_Prices_1__c.field-meta.xml
<CustomField>
    <fullName>New_List_Prices_1__c</fullName>
    <label>New List Prices 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>