unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Manufacture_Sale_for_Item_Mapping__c.field-meta.xml
<CustomField>
    <fullName>New_Manufacture_Sale_for_Item_Mapping__c</fullName>
    <formula>AND( ISPICKVAL(Transaction_Type_Detail__c ,'New Fleet Sale') ,OR(SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'External',SBQQ__Opportunity2__r.Customer_Category_for_Item_Map__c = 'Third Party Partnership'))</formula>
    <label>New Manufacture - Sale for Item Mapping</label>
    <type>Checkbox</type>
</CustomField>