unpackaged/main/default/objects/SBQQ__Quote__c/fields/New_Unit_Selling_Price_1__c.field-meta.xml
<CustomField>
    <fullName>New_Unit_Selling_Price_1__c</fullName>
    <label>New Unit Selling Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>