unpackaged/main/default/objects/SBQQ__Quote__c/fields/Non_Change_Order_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Non_Change_Order_Revenue__c</fullName>
    <formula>SBQQ__NetAmount__c -  Total_Change_Order_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Change Order Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>