unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Bill_to_Country__c.field-meta.xml
<CustomField>
    <fullName>NS_Bill_to_Country__c</fullName>
    <formula>Case( SBQQ__BillingCountry__c,
'Canada','_canada',
'United States','_unitedStates',
'Australia','_australia',
'_O'

)</formula>
    <label>NS Bill to Country</label>
    <type>Text</type>
</CustomField>