unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>NS_Billing_Frequency__c</fullName>
    <formula>Case( SBQQ__BillingFrequency__c ,
'1 Week','1',
'2 Weeks','2',
'4 Weeks','3',
'Monthly','4',
'Quarterly','5',
'0'
)</formula>
    <label>NS Billing Frequency</label>
    <type>Text</type>
</CustomField>