unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>NS_Contract_Type__c</fullName>
    <formula>Case(Transaction_Type__c,
'Sale','1',
'Rental','2',
'3'
)</formula>
    <label>NS Contract Type</label>
    <type>Text</type>
</CustomField>