unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>NS_Customer_Category__c</fullName>
    <formula>TEXT( SBQQ__Account__r.Customer_Category__c )</formula>
    <label>NS Customer Category</label>
    <type>Text</type>
</CustomField>