unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Payment_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Payment_Term_ID__c</fullName>
    <formula>Case( TEXT(SBQQ__PaymentTerms__c),

'1.0% 10, Net 30','5',
'1.0% 15, Net 30','13',
'1.5% 10, Net 30','14',
'1.5%, TEST','20',
'2.0% 10, Net 30','6',
'2.0% 15, Net 30','16',
'3.0% 10, Net 30','17',
'3.0% 14, Net 30','18',
'3.0% 15, Net 30','19',
'Due on Receipt','4',
'Net 0','8',
'Net 10','9',
'Net 15','1',
'Net 30','2',
'Net 45','12',
'Net 60','3',
'0'


)</formula>
    <label>NS Payment Term ID</label>
    <type>Text</type>
</CustomField>