unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Project_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Project_Template_ID__c</fullName>
    <formula>IF( ISPICKVAL(Transaction_Type_Detail__c,'Existing Fleet Sale'), '162150',
    IF( ISPICKVAL(Transaction_Type__c, 'Rental'),
        IF(Major_Project__c,'132939','131336'
	    ),
        IF(Major_Project__c,'132938','131337'
	    )
    )
)</formula>
    <label>NS Project Template ID</label>
    <type>Text</type>
</CustomField>