unpackaged/main/default/objects/SBQQ__Quote__c/fields/NS_Security_Deposit_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>NS_Security_Deposit_Line_ID__c</fullName>
    <label>NS Security Deposit Line ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>