unpackaged/main/default/objects/SBQQ__Quote__c/fields/Number_of_Active_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Active_Locations__c</fullName>
    <description>Number of Active Locations related to this account</description>
    <formula>SBQQ__Account__r.Number_of_Locations__c</formula>
    <inlineHelpText>Number of Active Locations related to this account</inlineHelpText>
    <label># of Active Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>