unpackaged/main/default/objects/SBQQ__Quote__c/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <description>Number of Locations covered by this contract. Used by MPA Disaster only.</description>
    <inlineHelpText>Number of Locations covered by this Disaster Contract.</inlineHelpText>
    <label># of Locations (MPA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>