unpackaged/main/default/objects/SBQQ__Quote__c/fields/Number_of_Sale_Units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sale_Units__c</fullName>
    <description>Count of all the Sale units included in this quote
Sum of all the Units/Floors included in this quote. Totals all the quote lines on a sale where the # of Floors is greater than 0</description>
    <inlineHelpText>Count of all the Sale units included in this quote</inlineHelpText>
    <label># of Sale Units</label>
    <summarizedField>SBQQ__QuoteLine__c.Number_of_Floors__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Transaction_Type_Text__c</field>
        <operation>equals</operation>
        <value>Sale</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>