unpackaged/main/default/objects/SBQQ__Quote__c/fields/OCD__c.field-meta.xml
<CustomField>
    <fullName>OCD__c</fullName>
    <formula>'Salesforce+Docs/'&amp; SBQQ__Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Conga Destination</label>
    <type>Text</type>
</CustomField>