unpackaged/main/default/objects/SBQQ__Quote__c/fields/Opp_Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Opp_Estimated_Delivery_Date__c</fullName>
    <description>Reads Estimated Delivery Date field from the Opportunity. Needed for Conga report issue</description>
    <formula>SBQQ__Opportunity2__r.Estimated_Delivery_Date__c</formula>
    <inlineHelpText>Reads Estimated Delivery Date field from the Opportunity. Needed for Conga report issue</inlineHelpText>
    <label>Estimated Delivery Date (Opp)</label>
    <type>Date</type>
</CustomField>