unpackaged/main/default/objects/SBQQ__Quote__c/fields/Opp_Estimated_First_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Opp_Estimated_First_Revenue__c</fullName>
    <description>Reads Estimated First Revenue Date field from the Opportunity.  Needed for Conga report issue</description>
    <formula>SBQQ__Opportunity2__r.Estimated_First_Revenue__c</formula>
    <inlineHelpText>Reads Estimated First Revenue Date field from the Opportunity.  Needed for Conga report issue</inlineHelpText>
    <label>Estimated First Revenue (Opp)</label>
    <type>Date</type>
</CustomField>