unpackaged/main/default/objects/SBQQ__Quote__c/fields/Other_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Other_Monthly_Payments__c</fullName>
    <formula>Total_Monthly_Amount__c - (Monthly_Building_Payments__c +  VAPS_Final_Monthly_Payment__c +  PPF_Final_Monthly_Payment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Monthly Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>