unpackaged/main/default/objects/SBQQ__Quote__c/fields/Override_New_Factor_2__c.field-meta.xml
<CustomField>
    <fullName>Override_New_Factor_2__c</fullName>
    <label>Override New Factor 2</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>