unpackaged/main/default/objects/SBQQ__Quote__c/fields/Override_New_ROA_3__c.field-meta.xml
<CustomField>
    <fullName>Override_New_ROA_3__c</fullName>
    <label>Override New ROA 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>