unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <description>Indicate whether Disaster customer pays annually or for the full term on each renewal.</description>
    <inlineHelpText>Indicate whether Disaster customer pays annually or for the full term on each renewal of this Contract.</inlineHelpText>
    <label>Payment Frequency (MPA)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
                <default>true</default>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>