unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payment_Method_Lodging__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Lodging__c</fullName>
    <description>Used to specify customer payment method. Further described in Lodging T&amp;Cs.</description>
    <inlineHelpText>Specify customer payment method. Further described in Lodging T&amp;Cs.</inlineHelpText>
    <label>Payment Method (Lodging)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card/Debit</fullName>
            </value>
            <value>
                <fullName>Direct Billing</fullName>
            </value>
            <value>
                <fullName>Third Party Credit Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>