unpackaged/main/default/objects/SBQQ__Quote__c/fields/Payment_Terms_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Details__c</fullName>
    <description>Further payment terms outlined on MPA, MSS US, and MSS Canada Sales Contract documents.</description>
    <inlineHelpText>Further payment term details. Printed on MPA, MSS US, and MSS Canada Sales Contract documents.</inlineHelpText>
    <label>Payment Terms Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>