unpackaged/main/default/objects/SBQQ__Quote__c/fields/Pending_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Approval</label>
    <type>Checkbox</type>
</CustomField>