unpackaged/main/default/objects/SBQQ__Quote__c/fields/Percentage_of_Purchase_Price_2__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Purchase_Price_2__c</fullName>
    <label>% of Purchase Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>