unpackaged/main/default/objects/SBQQ__Quote__c/fields/PPF_Final_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>PPF_Final_Monthly_Payment__c</fullName>
    <label>PPF Final Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>